allow aysnc await , instal axios, prefetch data from graphql, disable csrf

--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,7 @@
       "env",
       {
         "modules": false,
-        "targets": {
-          "browsers": "> 1%",
-          "uglify": true
-        },
+        "targets": { "node": "current" },
         "useBuiltIns": true
       }
     ],
